--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/uoc-advanced-html-css/uoc-boilerplate#readme",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@parcel/transformer-sass": "^2.8.3",
     "autoprefixer": "^10.4.13",
     "npm-run-all": "^4.1.5",
@@ -42,6 +43,7 @@
     "postcss-preset-env": "^7.8.3",
     "posthtml-include": "^1.7.4",
     "rimraf": "^3.0.2",
-    "sharp": "0.31.1"
+    "sharp": "0.31.1",
+    "tailwindcss": "^3.3.2"
   }
 }
